# granola-to-task

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/granola_to_task/: agent.py  main.py  models.py  source.py
